Updated SqubsPlugin